{GURPS] v1.7.1 Cosm,etic Changes: gurps.html, gurps.css, README.md, gurps.png, sheet.json
Updated screenshot of sheet image file
Updated, reformatted, and added many ToolTips – Cosmetic Only

--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -831,6 +831,8 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 .sheet-box .sheet-row-details2 .sheet-col3 input { text-align: left; }
 
 /* -- TOOLTIPS -- */
+.sheet-row-thrust-damage .sheet-col0 .sheet-tooltip { margin: -250px; }
+.sheet-row-swing-damage .sheet-col0 .sheet-tooltip { margin: -250px; }
 .sheet-lift .sheet-tooltip { margin-left: -170px; }
 .sheet-miscelleneous .sheet-tooltip { margin-left: -75px; }
 .sheet-active-defense .sheet-tooltip { margin-left: -120px; }
@@ -1473,14 +1475,8 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 .sheet-skills .sheet-col8 { width: 60px; }
 .sheet-skills .sheet-row-stats .sheet-col0 { margin-left: 48px; width: calc(100% - 376px); }
 
-.sheet-skills .sheet-row-misc .sheet-col0 { width: 75px; Text-align:right; font-size: 9px; height: 11px;}
-.sheet-skills .sheet-row-misc .sheet-col1 { width: 150px; }
-.sheet-skills .sheet-row-misc .sheet-col1 input { text-align:left; font-size: 9px; height: 11px;}
-.sheet-skills .sheet-row-misc .sheet-col2 { width: 175px; Text-align:right; font-size: 9px; height: 11px;}
-.sheet-skills .sheet-row-misc .sheet-col3 { width: 200px; }
-.sheet-skills .sheet-row-misc .sheet-col3 input { text-align:left; font-size: 9px; height: 11px;}
-
 .sheet-skills .sheet-row-misc .sheet-col0 { margin-left: 48px; width: calc(100% - 703px); }
+
 
 /* -- highlight row -- */
 .sheet-skills .repcontainer.ui-sortable.editmode .sheet-toggle-highlight {
@@ -1604,7 +1600,8 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 .sheet-ranged-attacks .sheet-col9 { width: 35px; }
 .sheet-ranged-attacks .sheet-col10 { width: 30px; }
 .sheet-ranged-attacks .sheet-col11 { width: 22px; }
-.sheet-ranged-attacks .sheet-col-verify { width: 75px; }
+.sheet-ranged-attacks .sheet-col-verify { width: 45px; }
+.sheet-ranged-attacks .sheet-col-verifycheck { width: 25px; }
 .sheet-ranged-attacks .sheet-header .sheet-col10 { width: 52px; }
 .sheet-ranged-attacks .sheet-row-stats .sheet-col0 { margin-left: 48px; width: calc(100% - 483px); }
 .sheet-ranged-attacks .sheet-row-stats .sheet-col0-st { margin-left: 20px; width: calc(100% - 580px); }
@@ -1969,13 +1966,6 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
 }
 
 .sheet-spells .sheet-row-stats .sheet-col0 { margin-left: 44px; width: calc(100% - 748px); }
-
-.sheet-spells .sheet-row-college .sheet-col0 { width: 75px; Text-align:right; font-size: 9px; height: 11px;}
-.sheet-spells .sheet-row-college .sheet-col1 { width: 150px; }
-.sheet-spells .sheet-row-college .sheet-col1 input { text-align:left; font-size: 9px; height: 11px;}
-.sheet-spells .sheet-row-college .sheet-col2 { width: 175px; Text-align:right; font-size: 9px; height: 11px;}
-.sheet-spells .sheet-row-college .sheet-col3 { width: 200px; }
-.sheet-spells .sheet-row-college .sheet-col3 input { text-align:left; font-size: 9px; height: 11px;}
 
 .sheet-spells .sheet-row-college .sheet-col0 { margin-left: 44px; width: calc(100% - 703px); }
 
