--- a/Palladium Fantasy 1E/palladium_fantasy_1e.css
+++ b/Palladium Fantasy 1E/palladium_fantasy_1e.css
@@ -112,16 +112,16 @@ input.sheet-arrow:checked ~ .sheet-body {
 .sheet-statheader-container{
     display:grid;
     align-items:center;
-    grid-template-columns: 400px 100px 200px
+    grid-template-columns: 450px 100px 150px
 }
 .sheet-whispertoggle-container{
     display:grid;
-    grid-template-columns: 0px 100px 0px 100px
+    grid-template-columns: 0px 75px 0px 75px
 }
 .sheet-toggle-left, .sheet-toggle-right{
-    width: 100px;
-    height: 20px;
-    margin-right: -100px;
+    width: 75px;
+    height: 18px;
+    margin-right: -75px;
     margin-bottom: 2px;
     cursor: pointer;
     z-index: 1;
@@ -135,9 +135,9 @@ input.sheet-arrow:checked ~ .sheet-body {
     
     background: #889987;
 
-    width: 100px;
-    height: 20px;
-    font-size: 18px;
+    width: 75px;
+    height: 18px;
+    font-size: 16px;
 }
 .sheet-toggle-left:checked + span::before, .sheet-toggle-right:checked + span::before{
     background: #9cb09b;
@@ -263,12 +263,52 @@ button[type=roll].sheet-rolldice::before {
     align-items:center;
     grid-template-columns: 213px 70px 70px 70px 70px 60px 60px
 }
+.sheet-attackoptions-container{
+    display:grid;
+    padding-bottom:5px;
+    align-items:center;
+    grid-template-columns: 125px 80px 160px 60px 225px
+}
 .sheet-melee-attack-panel, .sheet-ranged-attack-panel{
     padding:10px;
 }
 .sheet-melee-attack-panel{
     border-bottom:5px solid #889987;
     max-width:745px;
+}
+.sheet-mountparry-container{
+    display:grid;
+    grid-template-columns: 0px 75px 0px 75px
+}
+.sheet-mountdamage-container{
+    display:grid;
+    grid-template-columns: 0px 75px 0px 75px 0px 75px
+}
+.sheet-ctoggle-left,.sheet-ctoggle-middle, .sheet-ctoggle-right{
+    width: 75px;
+    height: 14px;
+    margin-right: -75px;
+    margin-bottom: 2px;
+    cursor: pointer;
+    z-index: 1;
+    opacity: 0;
+}
+.sheet-ctoggle-left + span::before, .sheet-ctoggle-middle + span::before, .sheet-ctoggle-right + span::before{
+    content:attr(title);
+    border: solid 2px #889987;
+    text-align: center;
+    display: inline-block;
+    
+    background: #889987;
+
+    width: 75px;
+    height: 14px;
+    font-size: 12px;
+}
+.sheet-ctoggle-left:checked + span::before, .sheet-ctoggle-middle:checked +span::before, 
+.sheet-ctoggle-right:checked + span::before{
+    background: #9cb09b;
+    border-bottom-color: black;
 }
 .sheet-mattack-grid-container{
     display:grid;
