Added companion assets and improved styling

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -112,13 +112,17 @@ hr {
     background-image: linear-gradient(to right, #ccc, #333, #ccc);
 }
 
-.sheet-page1tab, .sheet-page2tab {
+.sheet-page1tab, 
+.sheet-page2tab,
+.sheet-page3tab,
+.sheet-page4tab {
     display: none;
 }
 
-
 input[type=radio].sheet-page1:checked ~ div.sheet-page1tab,
-input[type=radio].sheet-page2:checked ~ div.sheet-page2tab {
+input[type=radio].sheet-page2:checked ~ div.sheet-page2tab,
+input[type=radio].sheet-page3:checked ~ div.sheet-page3tab,
+input[type=radio].sheet-page4:checked ~ div.sheet-page4tab {
     display: block;
 }
 
@@ -278,6 +282,20 @@ input.sheet-clear-vow + .sheet-vow-clear-label {
     margin-bottom: 2px;
 }
 
+.sheet-companion-health-box {
+    width: 45px;
+    height: 40px;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0%;
+    background: transparent;
+    border: 2px solid black;
+    margin-bottom: 2px;
+}
+
+
 .sheet-pc-name {
     width: 100%;
     font-family: Copperplate, "Copperplate Gothic Light", fantasy;
@@ -298,6 +316,16 @@ input.sheet-clear-vow + .sheet-vow-clear-label {
     font-family: Copperplate, "Copperplate Gothic Light", fantasy;
     font-weight: bold;
     font-size: 14px;
+}
+
+.sheet-border {
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+textarea.sheet-full-width {
+    width: 95%;
+    resize: vertical;
 }
 
 .sheet-page-label, .sheet-vow-clear-label {
@@ -498,4 +526,146 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
 	text-align: center;
 	border: 2px solid #434b4d;
 	background: transparent;
+}
+
+div.sheet-showhide{
+    display: none;
+}
+
+input[type="checkbox"].sheet-showhide:checked ~ div.sheet-showhide{
+    display: block;
+}
+
+span.sheet-showhide:checked {
+    background-color: black;
+    color: white;
+}
+
+span.sheet-showhide {
+    display: inline;
+    border: 1px solid #ccc;
+    margin-right: 11px;
+    border-radius: 4px;
+    padding: 2px 4px;
+    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+span.sheet-showhide:hover {
+    cursor: pointer;
+    border-radius: 4px;
+    padding: 2px 4px;
+    background-color: #ccc;
+    color: black;
+}
+
+input[type="checkbox"].sheet-asset-companion:checked ~ div.sheet-companion,
+input[type="checkbox"].sheet-asset-path:checked ~ div.sheet-path,
+input[type="checkbox"].sheet-asset-combat-talent:checked ~ div.sheet-combat-talent,
+input[type="checkbox"].sheet-asset-ritual:checked ~ div.sheet-ritual {
+    display: block;
+}
+
+input[type="checkbox"].sheet-asset-health-checkbox0:checked ~ div.sheet-companion-health-box0,
+input[type="checkbox"].sheet-asset-health-checkbox1:checked ~ div.sheet-companion-health-box1,
+input[type="checkbox"].sheet-asset-health-checkbox2:checked ~ div.sheet-companion-health-box2,
+input[type="checkbox"].sheet-asset-health-checkbox3:checked ~ div.sheet-companion-health-box3,
+input[type="checkbox"].sheet-asset-health-checkbox4:checked ~ div.sheet-companion-health-box4,
+input[type="checkbox"].sheet-asset-health-checkbox5:checked ~ div.sheet-companion-health-box5 {
+    display: inline-flex;
+}
+div.sheet-companion-health-box0,
+div.sheet-companion-health-box1,
+div.sheet-companion-health-box2,
+div.sheet-companion-health-box3,
+div.sheet-companion-health-box4,
+div.sheet-companion-health-box5 {
+    display: none;
+}
+
+div.sheet-companion,
+div.sheet-path,
+div.sheet-combat-talent,
+div.sheet-ritual {
+    display: none;
+}
+
+.sheet-asset-skill {
+    width: 210px;
+    height: 120px;
+    margin: 10px 4px 0px 25px;
+    resize: none;
+    border: 0;
+}
+.sheet-asset-skill-checkbox {
+    opacity: 1 !important;
+    margin: 0px 0px 17px 21px !important;
+}
+
+.sheet-asset {
+    display: inline-block;
+    width: 320px;
+    max-width: 320px;
+    border-radius: 4px;
+    border: 2px solid #343433;
+    margin-left: 44px;
+    margin-bottom: 20px;
+}
+
+div.sheet-assets{
+    display: block !important;
+    text-align: left;
+}
+
+div.sheet-assets .repcontainer .repitem {
+    float: left !important;
+}
+
+.sheet-asset-header {
+    background: #343433;
+    color: white;
+}
+
+.sheet-asset-type-selection {
+    background: #343433;
+    color: white;
+    border:0;
+}
+
+.sheet-asset-type-dropdown {
+    color: white;
+    background: #343433;
+    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+    width: auto;
+    font-size: 14px;
+    -webkit-appearance: menulist;
+    margin: 6px 4px;
+}
+
+.sheet-sub-dropdown {
+    -webkit-appearance: menulist;
+    width: auto;
+    margin: 6px 4px;
+}
+
+div.sheet-assets .repitem {
+   width: 421px 
+}
+
+div.sheet-assets .repcontrol{
+    display: block !important;
+    max-width: 320px !important;
+}
+
+.sheet-health-box-wrapper {
+    margin-left: 5px;
+}
+
+.sheet-companion-desc {
+    margin-left: 5px;
+}
+
+.sheet-no-border {
+    border: 0;
 }
