working on skills

--- a/Shadowrun Sixth World/Shadowrun6thEdition.pug
+++ b/Shadowrun Sixth World/Shadowrun6thEdition.pug
@@ -47,64 +47,60 @@ include src/pug/_variables.pug
 				.header.htab
 					.triangle
 					h1(data-i18n=val) Skills
-					.right-tri
 			.border-box.skill-box
 				.pc-box.medium-box
 					.rows.repeating-container
 						.row-long.headers
-							each val in ['Skill', 'RTG', 'Attribute']
+							each val in ['Skill', 'RTG', 'Attribute', 'Type']
 								- const translationKey = val.toLowerCase();
 								h2(data-i18n=translationKey) #{val}
 					input.tab-switch(name='attr_skill_toggle' type='hidden' value='active')
-					each val, key in {'active': ['active', 'Agility', 'Physical'],'knowledge':['know', 'Logic', 'Mental'], 'language': ['lang', 'Charisma', 'Social']}
-						div(class='skills-'+val[0])
-							.rows.repeating-container
-								if key === 'active'
-									.row-long
-										input(name='attr_default_display' type='hidden' value='Agility')
-										+rollButton('default', '@{default_display}', '@{default_attribute}+-1')
-										span.text-align-center -
-										select.attribute-select(name='attr_default_attribute' title='Skill attribute')
-											+attributeSelect('Agility')
-								fieldset(class='repeating_' + key)
-									- const skillsRepeatingSection = `@{repeating_${val[0]}`+'_${x}';
+					div(class='skills')
+						.rows.repeating-container
+							.row-long
+								input(name='attr_default_display' type='hidden' value='Agility')
+								+rollButton('default', '@{default_display}', '@{default_attribute}+-1')
+								span.text-align-center -
+								select.attribute-select(name='attr_default_attribute' title='Skill attribute')
+										+attributeSelect('Agility')
+							fieldset(class='repeating_skills')
+								- const skillsRepeatingSection = `@{repeating_skills`+'_${x}';
 
-									input(name='attr_display_rating' type='hidden')
-									input(name='attr_display_specialization' type='hidden' value='')
-									input(name='attr_display_limit' type='hidden' value=val[2])
-									input(name='attr_display_attribute' type='hidden' value=val[1])
-									input(name='attr_dicepool' type='hidden' value='0')
+								input(name='attr_display_rating' type='hidden')
+								input(name='attr_display_specialization' type='hidden' value='')
+								input(name='attr_display_attribute' type='hidden' value='Agility')
+								input(name='attr_dicepool' type='hidden' value='0')
 
-									input.settings-flag(name='attr_flag' type='hidden' value='settings' title=`${repeatingSection}_flag}`)
-									.buttons
-										//- SKILL BUTTON
-										+skillButton(false)
-										//- SPECILIZATION BUTTON
-										+skillButton(true)
-									span.text-align-center(name='attr_display_rating' title=`${skillsRepeatingSection}_display_rating}`)
-									select.attribute-select(name='attr_attribute' title=`${repeatingSection}_attribute}`)
-										+attributeSelect(val[1])
-									select.limit-select(name='attr_limit' value='physical_limit' title=`${repeatingSection}_limit}`)
-										+limitSelect(val[2])
-									+repeatingSectionFlags()
-									.settings
-										if key === 'active'
-											select.skill-select(name='attr_skill' value='Close Combat Group' title=`${repeatingSection}_skill}`)
-												include src/html/skillselect.html
-										else
-											label(data-i18n-title='skill' title='skill')
-												input(name='attr_skill' placeholder=key type='text' title=`${repeatingSection}_skill}`)
-										label(data-i18n-title='rating' title='rating')
-											input(name='attr_rating' min='0' placeholder='0' type='number' title=`${repeatingSection}_rating}`)
-										label(data-i18n-title='ratingmodifier' title='Rating Modifier')
-											span(data-i18n='ratingmodifier') Rating Modifier
-											input(name='attr_rating_modifier' placeholder='0' type='number' title=`${repeatingSection}_rating_modifier}`)
-										label(data-i18n-title='specialization' title='specialization') 
-											span(data-i18n='specialization') specialization
-											input(name='attr_specialization}' placeholder='Specalizations' type='text' title=`${repeatingSection}_specialization}`)
-										label(data-i18n-title='notes' title='notes')
-											span(data-i18n='notes') Notes
-											textarea(name='attr_notes' value='' placeholder='Notes' title=`${repeatingSection}_notes}`)
+								input.settings-flag(name='attr_flag' type='hidden' value='settings' title=`${repeatingSection}_flag}`)
+								.buttons
+									//- SKILL BUTTON
+									+skillButton(false)
+									//- SPECILIZATION BUTTON
+									+skillButton(true)
+								span.text-align-center(name='attr_display_rating' title=`${skillsRepeatingSection}_display_rating}`)
+								select.attribute-select(name='attr_attribute' title=`${repeatingSection}_attribute}`)
+									+attributeSelect('Agility')
+								select.limit-select(name='attr_type' value='active' title=`${repeatingSection}_type}`)
+									each val in ['Active', 'Knowledge', 'Language']
+										option(data-i18n=val value=`@{${val.toLowerCase()}}`) #{val}
+								+repeatingSectionFlags()
+								.settings
+									select.skill-select(name='attr_name' value='Close Combat' title=`${repeatingSection}_name}`)
+										include src/html/skillselect.html
+									label(data-i18n-title='name' title='name')
+										input(name='attr_name' placeholder='name' type='text' title=`${repeatingSection}_name}`)
+									label(data-i18n-title='rating' title='rating')
+										input(name='attr_rating' min='0' placeholder='0' type='number' title=`${repeatingSection}_rating}`)
+									label(data-i18n-title='rating modifier' title='rating modifier')
+										span(data-i18n='rating modifier') rating modifier
+										input(name='attr_rating_modifier' placeholder='0' type='number' title=`${repeatingSection}_rating_modifier}`)
+									label(data-i18n-title='specialization' title='specialization') 
+										span(data-i18n='specialization') specialization
+										input(name='attr_specialization}' placeholder='Specalizations' type='text' title=`${repeatingSection}_specialization}`)
+									label(data-i18n-title='notes' title='notes')
+										span(data-i18n='notes') Notes
+										textarea(name='attr_notes' value='' placeholder='Notes' title=`${repeatingSection}_notes}`)
+
 
 
 	//- CORE TAB
