--- a/Shadowrun Sixth World/src/scss/_hide.scss
+++ b/Shadowrun Sixth World/src/scss/_hide.scss
@@ -206,7 +206,7 @@
 	}
 
 	%highlight-button {
-		background-color: $red;
-		box-shadow      : inset 0px 0px 3px 1px #e31715; 
+		background-color: $purple;
+		box-shadow      : inset 0px 0px 3px 1px $red; 
 		color           : #fff;
 	}
