--- a/Shadowrun Sixth World/Shadowrun6thEdition.css
+++ b/Shadowrun Sixth World/Shadowrun6thEdition.css
@@ -184,7 +184,7 @@ input:checked + .sheet-slider:before {
   font-size: 2.5em;
   vertical-align: top; }
   .sheet-tabs button[type='roll']:hover {
-    text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px #e31715; }
+    text-shadow: 1px 1px 2px black, 0 0 25px #460141, 0 0 5px #460141; }
 .sheet-tabs h2 {
   font-size: 1em;
   text-transform: capitalize;
@@ -1072,16 +1072,14 @@ div.sheet-right-header {
   float: left; }
 
 /***** SECONDARY HEADERS LIKE ON SKILLS *****/
-div.sheet-htab {
-  margin-right: -47px; }
-  div.sheet-htab input[type='radio'] {
-    margin-right: -80px;
-    top: 4px;
-    width: 80px; }
-    div.sheet-htab input[type='radio'] + h1 {
-      color: #9a9a9a; }
-    div.sheet-htab input[type='radio']:hover ~ h1, div.sheet-htab input[type='radio']:checked ~ h1 {
-      color: #fff; }
+div.sheet-htab input[type='radio'] {
+  margin-right: -80px;
+  top: 4px;
+  width: 80px; }
+  div.sheet-htab input[type='radio'] + h1 {
+    color: #9a9a9a; }
+  div.sheet-htab input[type='radio']:hover ~ h1, div.sheet-htab input[type='radio']:checked ~ h1 {
+    color: #fff; }
 
 /***** BOXES FOR DIFFERENT PC SECTIONS *****/
 .sheet-pc-box {
@@ -1606,7 +1604,7 @@ input.sheet-skill-select[type='checkbox'] {
     width: 25%; }
   .sheet-matrix .sheet-con-hex input[type='radio']:hover ~ h2 {
     color: #fff;
-    text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px #460141; }
+    text-shadow: 1px 1px 2px black, 0 0 25px #460141, 0 0 5px #460141; }
   .sheet-matrix .sheet-con-hex h2 {
     vertical-align: top; }
 
@@ -2421,8 +2419,8 @@ input[name='attr_stats_toggle']:not([value='settings']) ~ div.sheet-body div.she
   display: none; }
 
 .sheet-pc .sheet-tabs input[value*='arms'] ~ button[name*='arms'], .sheet-pc .sheet-tabs input[value*='augs'] ~ button[name*='augs'], .sheet-pc .sheet-tabs input[value*='core'] ~ button[name*='core'], .sheet-pc .sheet-tabs input[value*='gear'] ~ button[name*='gear'], .sheet-pc .sheet-tabs input[value*='options'] ~ button[name*='options'], .sheet-pc .sheet-tabs input[value*='social'] ~ button[name*='social'], .sheet-pc .sheet-tabs input[value*='magic'] ~ button[name*='magic'], .sheet-pc .sheet-tabs input[value*='matrix'] ~ button[name*='matrix'], .sheet-pc .sheet-tabs input[value*='vehicle'] ~ button[name*='vehicle'] {
-  background-color: #460141;
-  box-shadow: inset 0px 0px 3px 1px #e31715;
+  background-color: #79016f;
+  box-shadow: inset 0px 0px 3px 1px #460141;
   color: #fff; }
 
 /*****************************************************************************************/
@@ -2581,151 +2579,6 @@ div.sheet-footer img {
 
 .sheet-rolltemplate-rolls span.sheet-template-desc .inlinerollresult {
   font-size: 14px; }
-
-/********************************************************************************************************/
-/*******************************         Charactermancer        ****************************************/
-/******************************************************************************************************/
-div.sheet-mancer-box {
-  border: 2px solid #610b0d;
-  background-color: #e7e6e5;
-  margin: 1% 2%;
-  padding: 1% 2%; }
-
-div.sheet-mancer-box input[type='radio'],
-div.sheet-mancer-box input[type='checkbox'] {
-  opacity: 1;
-  height: 1.5em;
-  width: 1.5em; }
-
-div.sheet-mancer-box input[type='text'] {
-  background-color: white;
-  border: 1px solid #333;
-  width: 100%; }
-
-div.sheet-mancer-box label {
-  display: inline-block; }
-
-div.sheet-mancer-box div.sheet-pick-builder label {
-  margin: 2% 2% 1% 0%;
-  width: 15%; }
-
-div.sheet-mancer-box label {
-  display: inline-block;
-  margin: 2% 2%; }
-
-div.sheet-mancer-box h1 {
-  text-decoration: underline; }
-
-div.sheet-mancer-box label > h4 {
-  display: inline; }
-
-div.sheet-mancer-box textarea {
-  overflow: scroll;
-  min-height: 5em;
-  width: 100%; }
-
-div.sheet-mancer-box hr {
-  margin-top: 3%;
-  margin-bottom: 3%; }
-
-div.sheet-mancer-box button,
-div.sheet-bottombar button {
-  border-radius: 2px;
-  font-weight: bolder;
-  height: 2em;
-  padding: 5px;
-  text-transform: capitalize;
-  background-color: #333;
-  box-shadow: inset 0px 0px 3px 1px #7c7c7c;
-  color: #fff; }
-
-div.sheet-mancer-box button:not(disabled):hover,
-div.sheet-mancer-box button:not(disabled):focus,
-button[name='act_import_launch']:hover,
-button[name='act_import_launch']:focus {
-  text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px #e31715;
-  text-transform: capitalize;
-  border: 0.1em dotted white; }
-
-div.sheet-mancer-box button[type='action'],
-div.sheet-mancer-box button[type='finish'] {
-  font-size: 1.5em;
-  width: 20%; }
-
-div.sheet-mancer-box button[type='finish']:disabled {
-  color: rgba(255, 255, 255, 0.2);
-  cursor: not-allowed; }
-
-div.sheet-mancer-box button[type='cancel'] {
-  margin-top: 3%;
-  float: right;
-  font-size: 1em; }
-
-div.sheet-mancer-box .sheet-feedback {
-  color: #000e3b; }
-
-div.sheet-mancer-box .sheet-warning {
-  color: #610b0d; }
-
-div.sheet-mancer-box .sheet-results,
-div.sheet-mancer-box .sheet-error {
-  border: 1px solid #333;
-  box-shadow: inset 0px 0px 3px 1px #7c7c7c;
-  height: 30em;
-  margin-top: 2%;
-  overflow: scroll;
-  padding: 1%; }
-
-div.sheet-mancer-box .sheet-results {
-  border: 1px solid #000e3b;
-  margin-right: 3%;
-  background: rgba(136, 221, 4, 0.1); }
-
-div.sheet-mancer-box .sheet-error {
-  border: 1px solid #610b0d;
-  background: rgba(204, 7, 1, 0.11); }
-
-div.sheet-result-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr; }
-
-div.sheet-result-grid h4:nth-of-type(1) {
-  grid-column: 1 / 1;
-  grid-row: 1 / 1; }
-
-div.sheet-result-grid h4:nth-of-type(2) {
-  grid-column: 2 / 2;
-  grid-row: 1 / 1; }
-
-div.sheet-results {
-  grid-column: 1 / 1;
-  grid-row: 2 / 2; }
-
-div.sheet-ignored {
-  grid-column: 2 / 2;
-  grid-row: 2 / 2; }
-
-div.sheet-hidden,
-div.sheet-hidden-skills {
-  display: none; }
-
-h4.sheet-hidden-header {
-  display: inline; }
-
-input[name='comp_hidden']:checked + div.sheet-hidden,
-input[name='comp_hidden']:checked + div.sheet-hidden-skills {
-  display: block; }
-
-div.sheet-hidden label {
-  display: inline-block;
-  width: 30%;
-  margin: 1% 1%; }
-
-div.sheet-hidden div {
-  display: inline-block;
-  font-weight: bold;
-  margin-right: 2%;
-  width: 40%; }
 
 /********************************************************************************************************/
 /*******************************         FireFox             *******************************************/
