--- a/Shadowrun Sixth World/Shadowrun6thEdition.scss
+++ b/Shadowrun Sixth World/Shadowrun6thEdition.scss
@@ -80,7 +80,7 @@
 				vertical-align: top;
 
 				&:hover {
-					text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px #e31715;
+					text-shadow: 1px 1px 2px black, 0 0 25px $red, 0 0 5px $red;
 				}
 			}
 		}
@@ -909,11 +909,6 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 /********************************************************************************************************/
 
 	@import 'src/scss/_rolltemplate';
-
-/********************************************************************************************************/
-/*******************************         Charactermancer        ****************************************/
-/******************************************************************************************************/
-	@import 'src/scss/_importer';
 
 
 /********************************************************************************************************/
