--- a/Shadowrun Sixth World/src/scss/_pc.scss
+++ b/Shadowrun Sixth World/src/scss/_pc.scss
@@ -41,7 +41,6 @@
 
 /***** SECONDARY HEADERS LIKE ON SKILLS *****/
 	div.sheet-htab {
-		margin-right: -47px;
 
 		input {
 			&[type='radio'] {
@@ -718,7 +717,7 @@
 
 				input[type='radio']:hover ~ h2 {
 					color      : #fff;
-					text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px $red;
+					text-shadow: 1px 1px 2px black, 0 0 25px $red, 0 0 5px $red;
 				}
 
 				h2 {vertical-align: top;}
