--- a/Shadowrun Sixth World/Shadowrun6thEdition.pug
+++ b/Shadowrun Sixth World/Shadowrun6thEdition.pug
@@ -51,7 +51,7 @@ include src/pug/_variables.pug
 				.pc-box.medium-box
 					.rows.repeating-container
 						.row-long.headers
-							each val in ['Skill', 'RTG', 'Attribute', 'Type']
+							each val in ['Skill', 'RTG', 'Attribute']
 								- const translationKey = val.toLowerCase();
 								h2(data-i18n=translationKey) #{val}
 					input.tab-switch(name='attr_skill_toggle' type='hidden' value='active')
@@ -75,20 +75,22 @@ include src/pug/_variables.pug
 								.buttons
 									//- SKILL BUTTON
 									+skillButton(false)
-									//- SPECILIZATION BUTTON
+									//- SPECILIZATION BUTTONrating modifier
 									+skillButton(true)
 								span.text-align-center(name='attr_display_rating' title=`${skillsRepeatingSection}_display_rating}`)
 								select.attribute-select(name='attr_attribute' title=`${repeatingSection}_attribute}`)
 									+attributeSelect('Agility')
-								select.limit-select(name='attr_type' value='active' title=`${repeatingSection}_type}`)
-									each val in ['Active', 'Knowledge', 'Language']
-										option(data-i18n=val value=`@{${val.toLowerCase()}}`) #{val}
 								+repeatingSectionFlags()
 								.settings
-									select.skill-select(name='attr_name' value='Close Combat' title=`${repeatingSection}_name}`)
-										include src/html/skillselect.html
-									label(data-i18n-title='name' title='name')
-										input(name='attr_name' placeholder='name' type='text' title=`${repeatingSection}_name}`)
+									select(name='attr_type' value='active' title=`${repeatingSection}_type}`)
+										each val in ['Active', 'Knowledge', 'Language']
+											option(data-i18n=val value=`@{${val.toLowerCase()}}`) #{val}
+									.skillselect
+										select.skill-select(name='attr_name' value='Close Combat' title=`${repeatingSection}_name}`)
+											include src/html/skillselect.html
+									.skillinput
+										label(data-i18n-title='name' title='name')
+											input(name='attr_name' placeholder='name' type='text' title=`${repeatingSection}_name}`)
 									label(data-i18n-title='rating' title='rating')
 										input(name='attr_rating' min='0' placeholder='0' type='number' title=`${repeatingSection}_rating}`)
 									label(data-i18n-title='rating modifier' title='rating modifier')
@@ -96,11 +98,13 @@ include src/pug/_variables.pug
 										input(name='attr_rating_modifier' placeholder='0' type='number' title=`${repeatingSection}_rating_modifier}`)
 									label(data-i18n-title='specialization' title='specialization') 
 										span(data-i18n='specialization') specialization
-										input(name='attr_specialization}' placeholder='Specalizations' type='text' title=`${repeatingSection}_specialization}`)
+										input(name='attr_specialization}' placeholder='specialization' type='text' title=`${repeatingSection}_specialization}`)
+									label(data-i18n-title='focus' title='focus') 
+										span(data-i18n='focus') focus
+										input(name='attr_focus}' placeholder='focus' type='text' title=`${repeatingSection}_focus}`)
 									label(data-i18n-title='notes' title='notes')
 										span(data-i18n='notes') Notes
 										textarea(name='attr_notes' value='' placeholder='Notes' title=`${repeatingSection}_notes}`)
-
 
 
 	//- CORE TAB
