added 3rd set of assets

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -282,9 +282,22 @@ input.sheet-clear-vow + .sheet-vow-clear-label {
     margin-bottom: 2px;
 }
 
-.sheet-companion-health-box {
+.sheet-companion-health-box,
+.sheet-companion-wealth-box {
     width: 45px;
     height: 40px;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0%;
+    background: transparent;
+    border: 2px solid black;
+    margin-bottom: 2px;
+}
+
+.sheet-combat-talent-armour-box {
+    width: 149px;
     display: inline-flex;
     flex-direction: column;
     justify-content: center;
@@ -450,6 +463,10 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
     position: absolute;
 }
 
+.sheet-hidden-flex {
+    display: none;
+}
+
 /* ROLL TEMPLATE */
 .sheet-rolltemplate-ironsworn table>thead>tr>th, 
 .sheet-rolltemplate-ironsworn table>tbody>tr>th, 
@@ -575,6 +592,7 @@ input[type="checkbox"].sheet-asset-health-checkbox4:checked ~ div.sheet-companio
 input[type="checkbox"].sheet-asset-health-checkbox5:checked ~ div.sheet-companion-health-box5 {
     display: inline-flex;
 }
+
 div.sheet-companion-health-box0,
 div.sheet-companion-health-box1,
 div.sheet-companion-health-box2,
@@ -589,6 +607,18 @@ div.sheet-path,
 div.sheet-combat-talent,
 div.sheet-ritual {
     display: none;
+}
+
+.sheet-combattalent-requirement-checkbox:checked ~ .sheet-combattalent-requirement,
+.sheet-combat-talent-armour-checkbox:checked ~ .sheet-armour-box-wrapper,
+.sheet-path-wealth-checkbox:checked ~ .sheet-wealth-box-wrapper,
+.sheet-path-name-checkbox:checked ~ .sheet-path-name,
+.sheet-path-speciality-checkbox:checked ~ .sheet-path-speciality,
+.sheet-path-requirement-checkbox:checked ~ .sheet-path-requirement,
+.sheet-path-title-checkbox:checked ~ .sheet-path-title,
+.sheet-path-godsname-checkbox:checked ~ .sheet-path-godsname,
+.sheet-path-stat-checkbox:checked ~ .sheet-path-stat {
+    display: block;
 }
 
 .sheet-asset-skill {
@@ -658,14 +688,29 @@ div.sheet-assets .repcontrol{
     max-width: 320px !important;
 }
 
-.sheet-health-box-wrapper {
+.sheet-health-box-wrapper,
+.sheet-wealth-box-wrapper {
     margin-left: 5px;
 }
 
-.sheet-companion-desc {
+.sheet-companion-desc,
+.sheet-combattalent-desc,
+.sheet-path-desc {
     margin-left: 5px;
 }
 
 .sheet-no-border {
     border: 0;
+}
+
+.sheet-requirement-area {
+    height: 72px;
+}
+
+.sheet-combat-talent-requirement-area {
+    height: 38px
+}
+
+input.sheet-border-bottom {
+    border-bottom: 1px solid black;
 }
