cleaned up some duplication

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -463,10 +463,6 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
     position: absolute;
 }
 
-.sheet-hidden-flex {
-    display: none;
-}
-
 /* ROLL TEMPLATE */
 .sheet-rolltemplate-ironsworn table>thead>tr>th, 
 .sheet-rolltemplate-ironsworn table>tbody>tr>th, 
@@ -549,10 +545,6 @@ div.sheet-showhide{
     display: none;
 }
 
-input[type="checkbox"].sheet-showhide:checked ~ div.sheet-showhide{
-    display: block;
-}
-
 span.sheet-showhide:checked {
     background-color: black;
     color: white;
@@ -577,13 +569,6 @@ span.sheet-showhide:hover {
     color: black;
 }
 
-input[type="checkbox"].sheet-asset-companion:checked ~ div.sheet-companion,
-input[type="checkbox"].sheet-asset-path:checked ~ div.sheet-path,
-input[type="checkbox"].sheet-asset-combat-talent:checked ~ div.sheet-combat-talent,
-input[type="checkbox"].sheet-asset-ritual:checked ~ div.sheet-ritual {
-    display: block;
-}
-
 input[type="checkbox"].sheet-asset-health-checkbox0:checked ~ div.sheet-companion-health-box0,
 input[type="checkbox"].sheet-asset-health-checkbox1:checked ~ div.sheet-companion-health-box1,
 input[type="checkbox"].sheet-asset-health-checkbox2:checked ~ div.sheet-companion-health-box2,
@@ -598,17 +583,21 @@ div.sheet-companion-health-box1,
 div.sheet-companion-health-box2,
 div.sheet-companion-health-box3,
 div.sheet-companion-health-box4,
-div.sheet-companion-health-box5 {
-    display: none;
-}
-
+div.sheet-companion-health-box5,
 div.sheet-companion,
 div.sheet-path,
 div.sheet-combat-talent,
-div.sheet-ritual {
+div.sheet-ritual,
+div.sheet-showhide,
+.sheet-hidden-flex {
     display: none;
 }
 
+input[type="checkbox"].sheet-showhide:checked ~ div.sheet-showhide,
+input[type="checkbox"].sheet-asset-companion:checked ~ div.sheet-companion,
+input[type="checkbox"].sheet-asset-path:checked ~ div.sheet-path,
+input[type="checkbox"].sheet-asset-combat-talent:checked ~ div.sheet-combat-talent,
+input[type="checkbox"].sheet-asset-ritual:checked ~ div.sheet-ritual,
 .sheet-combattalent-requirement-checkbox:checked ~ .sheet-combattalent-requirement,
 .sheet-combat-talent-armour-checkbox:checked ~ .sheet-armour-box-wrapper,
 .sheet-path-wealth-checkbox:checked ~ .sheet-wealth-box-wrapper,
@@ -622,12 +611,13 @@ div.sheet-ritual {
 }
 
 .sheet-asset-skill {
-    width: 210px;
-    height: 120px;
+    width: 242px;
+    height: 85px;
     margin: 10px 4px 0px 25px;
     resize: none;
     border: 0;
 }
+
 .sheet-asset-skill-checkbox {
     opacity: 1 !important;
     margin: 0px 0px 17px 21px !important;
