added ritual logic and stylign

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -48,6 +48,10 @@ h3 {
     text-transform: uppercase;
 }
 
+h3.sheet-ritual-track-text {
+    line-height: 28px;
+}
+
 h3.sheet-divide::after, h3.sheet-divide::before {
     display: inline-block;
     content: "";
@@ -298,6 +302,19 @@ input.sheet-clear-vow + .sheet-vow-clear-label {
 
 .sheet-combat-talent-armour-box {
     width: 149px;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0%;
+    background: transparent;
+    border: 2px solid black;
+    margin-bottom: 2px;
+}
+
+.sheet-ritual-track-box {
+    width: 37px;
+    height: 42x;
     display: inline-flex;
     flex-direction: column;
     justify-content: center;
@@ -601,6 +618,7 @@ input[type="checkbox"].sheet-asset-ritual:checked ~ div.sheet-ritual,
 .sheet-combattalent-requirement-checkbox:checked ~ .sheet-combattalent-requirement,
 .sheet-combat-talent-armour-checkbox:checked ~ .sheet-armour-box-wrapper,
 .sheet-path-wealth-checkbox:checked ~ .sheet-wealth-box-wrapper,
+.sheet-ritual-track-checkbox:checked ~ .sheet-ritual-box-wrapper, 
 .sheet-path-name-checkbox:checked ~ .sheet-path-name,
 .sheet-path-speciality-checkbox:checked ~ .sheet-path-speciality,
 .sheet-path-requirement-checkbox:checked ~ .sheet-path-requirement,
@@ -679,7 +697,8 @@ div.sheet-assets .repcontrol{
 }
 
 .sheet-health-box-wrapper,
-.sheet-wealth-box-wrapper {
+.sheet-wealth-box-wrapper,
+.sheet-ritual-box-wrapper {
     margin-left: 5px;
 }
 
