fixed armor type and margin

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -201,16 +201,6 @@ input.sheet-clear-vow + .sheet-vow-clear-label {
     align-items: center;
 }
 
-.sheet-bonds {
-    margin-bottom: 0px;
-}
-.sheet-bond {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
 .sheet-vows {
     margin-bottom: 0px;
 }
@@ -700,6 +690,11 @@ div.sheet-assets .repcontrol{
 .sheet-wealth-box-wrapper,
 .sheet-ritual-box-wrapper {
     margin-left: 5px;
+    margin-bottom: 10px;
+}
+
+.sheet-armour-box-wrapper {
+    margin-bottom: 10px;
 }
 
 .sheet-companion-desc,
