Added ability to add details.

--- a/vampire-v5/vampirev5.css
+++ b/vampire-v5/vampirev5.css
@@ -724,9 +724,20 @@ input.sheet-arrowBox[type="checkbox"] + span::before
     font-weight: bold;
     font-family: Fremont;
 }
+
 input.sheet-arrowBox[type="checkbox"]:checked + span::before
 {
     content: "Powers  ▼";
+}
+
+input.sheet-ritualArrowBox[type="checkbox"] + span::before
+{
+    content: "Details ◄";
+}
+
+input.sheet-ritualArrowBox[type="checkbox"]:checked + span::before
+{
+    content: "Details  ▼";
 }
 
 div.sheet-arrowBox
