cleaned up css duplicates

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -470,84 +470,6 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
     position: absolute;
 }
 
-/* ROLL TEMPLATE */
-.sheet-rolltemplate-ironsworn table>thead>tr>th, 
-.sheet-rolltemplate-ironsworn table>tbody>tr>th, 
-.sheet-rolltemplate-ironsworn table>tfoot>tr>th, 
-.sheet-rolltemplate-ironsworn table>thead>tr>td, 
-.sheet-rolltemplate-ironsworn table>tbody>tr>td, 
-.sheet-rolltemplate-ironsworn table>tfoot>tr>td {
-    padding: 4px;
-    border: none; 
-}
-.sheet-rolltemplate-ironsworn table {
-    width: 100%;
-	/*border: 1px solid;*/
-	color: black;
-	font-size: 1em;
-    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
-    margin: 0px;
-}
-
-.sheet-rolltemplate-ironsworn th {
-    
-	background-color: #434b4d;
-	color: #ffffff;
-	padding: 2px;
-	/*border-bottom: 1px solid black;*/
-	line-height: 1.2em;
-	font-size: 1.2em;
-	text-align: center;
-}
-
-.sheet-rolltemplate-ironsworn .sheet-subheader {
-    background-color: #434b4d;
-    color: #ffffff;
-    line-height: 0.9em;
-    font-size: 0.9em;
-    font-family: Rockwell, "Courier Bold", Courier, Georgia, Times, "Times New Roman", serif;
-    font-variant: small-caps;
-    font-style: italic;
-    font-weight: bold;
-    text-align: left;
-}
-
-.sheet-rolltemplate-ironsworn .sheet-subfooter {
-    background-color: #b9b9b6;
-    line-height: 0.9em;
-    font-size: 0.9em;
-    font-family: Rockwell, "Courier Bold", Courier, Georgia, Times, "Times New Roman", serif;
-    font-variant: small-caps;
-    font-style: italic;
-    font-weight: bold;
-    text-align: left;
-}
-
-.sheet-rolltemplate-ironsworn .userscript-tcat {
-	font-weight: bold;
-}
-
-.sheet-rolltemplate-ironsworn td {
-	padding: 5px;
-	/*border-bottom: 1px solid black;*/
-}
-
-.sheet-rolltemplate-ironsworn tr:nth-child(odd) {
-	background-color: #d9d9d6;
-}
-
-.sheet-rolltemplate-ironsworn tr:nth-child(even) {
-	background-color: #e9e9e6;
-}
-
-.sheet-rolltemplate-ironsworn .inlinerollresult  {
-	display: inline-block;
-	min-width: 1.5em;
-	text-align: center;
-	border: 2px solid #434b4d;
-	background: transparent;
-}
-
 div.sheet-showhide{
     display: none;
 }
@@ -576,28 +498,18 @@ span.sheet-showhide:hover {
     color: black;
 }
 
-input[type="checkbox"].sheet-asset-health-checkbox0:checked ~ div.sheet-companion-health-box0,
-input[type="checkbox"].sheet-asset-health-checkbox1:checked ~ div.sheet-companion-health-box1,
-input[type="checkbox"].sheet-asset-health-checkbox2:checked ~ div.sheet-companion-health-box2,
-input[type="checkbox"].sheet-asset-health-checkbox3:checked ~ div.sheet-companion-health-box3,
-input[type="checkbox"].sheet-asset-health-checkbox4:checked ~ div.sheet-companion-health-box4,
-input[type="checkbox"].sheet-asset-health-checkbox5:checked ~ div.sheet-companion-health-box5 {
-    display: inline-flex;
-}
-
-div.sheet-companion-health-box0,
-div.sheet-companion-health-box1,
-div.sheet-companion-health-box2,
-div.sheet-companion-health-box3,
-div.sheet-companion-health-box4,
-div.sheet-companion-health-box5,
-div.sheet-companion,
-div.sheet-path,
-div.sheet-combat-talent,
-div.sheet-ritual,
 div.sheet-showhide,
 .sheet-hidden-flex {
     display: none;
+}
+
+input[type="checkbox"].sheet-asset-health0:checked ~ div.sheet-companion-health-box0,
+input[type="checkbox"].sheet-asset-health1:checked ~ div.sheet-companion-health-box1,
+input[type="checkbox"].sheet-asset-health2:checked ~ div.sheet-companion-health-box2,
+input[type="checkbox"].sheet-asset-health3:checked ~ div.sheet-companion-health-box3,
+input[type="checkbox"].sheet-asset-health4:checked ~ div.sheet-companion-health-box4,
+input[type="checkbox"].sheet-asset-health5:checked ~ div.sheet-companion-health-box5 {
+    display: inline-flex;
 }
 
 input[type="checkbox"].sheet-showhide:checked ~ div.sheet-showhide,
@@ -605,16 +517,16 @@ input[type="checkbox"].sheet-asset-companion:checked ~ div.sheet-companion,
 input[type="checkbox"].sheet-asset-path:checked ~ div.sheet-path,
 input[type="checkbox"].sheet-asset-combat-talent:checked ~ div.sheet-combat-talent,
 input[type="checkbox"].sheet-asset-ritual:checked ~ div.sheet-ritual,
-.sheet-combattalent-requirement-checkbox:checked ~ .sheet-combattalent-requirement,
-.sheet-combat-talent-armour-checkbox:checked ~ .sheet-armour-box-wrapper,
-.sheet-path-wealth-checkbox:checked ~ .sheet-wealth-box-wrapper,
-.sheet-ritual-track-checkbox:checked ~ .sheet-ritual-box-wrapper, 
-.sheet-path-name-checkbox:checked ~ .sheet-path-name,
-.sheet-path-speciality-checkbox:checked ~ .sheet-path-speciality,
-.sheet-path-requirement-checkbox:checked ~ .sheet-path-requirement,
-.sheet-path-title-checkbox:checked ~ .sheet-path-title,
-.sheet-path-godsname-checkbox:checked ~ .sheet-path-godsname,
-.sheet-path-stat-checkbox:checked ~ .sheet-path-stat {
+input[type="checkbox"].sheet-combattalent-requirement:checked ~ .sheet-combattalent-requirement,
+input[type="checkbox"].sheet-combat-talent-armour:checked ~ .sheet-armour-box-wrapper,
+input[type="checkbox"].sheet-path-wealth:checked ~ .sheet-wealth-box-wrapper,
+input[type="checkbox"].sheet-ritual-track:checked ~ .sheet-ritual-box-wrapper, 
+input[type="checkbox"].sheet-path-name:checked ~ .sheet-path-name,
+input[type="checkbox"].sheet-path-speciality:checked ~ .sheet-path-speciality,
+input[type="checkbox"].sheet-path-requirement:checked ~ .sheet-path-requirement,
+input[type="checkbox"].sheet-path-title:checked ~ .sheet-path-title,
+input[type="checkbox"].sheet-path-godsname:checked ~ .sheet-path-godsname,
+input[type="checkbox"].sheet-path-stat:checked ~ .sheet-path-stat {
     display: block;
 }
 
@@ -626,7 +538,7 @@ input[type="checkbox"].sheet-asset-ritual:checked ~ div.sheet-ritual,
     border: 0;
 }
 
-.sheet-asset-skill-checkbox {
+.sheet-asset-skill {
     opacity: 1 !important;
     margin: 0px 0px 17px 21px !important;
 }
@@ -717,4 +629,82 @@ div.sheet-assets .repcontrol{
 
 input.sheet-border-bottom {
     border-bottom: 1px solid black;
+}
+
+/* ROLL TEMPLATE */
+.sheet-rolltemplate-ironsworn table>thead>tr>th, 
+.sheet-rolltemplate-ironsworn table>tbody>tr>th, 
+.sheet-rolltemplate-ironsworn table>tfoot>tr>th, 
+.sheet-rolltemplate-ironsworn table>thead>tr>td, 
+.sheet-rolltemplate-ironsworn table>tbody>tr>td, 
+.sheet-rolltemplate-ironsworn table>tfoot>tr>td {
+    padding: 4px;
+    border: none; 
+}
+.sheet-rolltemplate-ironsworn table {
+    width: 100%;
+	/*border: 1px solid;*/
+	color: black;
+	font-size: 1em;
+    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+    margin: 0px;
+}
+
+.sheet-rolltemplate-ironsworn th {
+    
+	background-color: #434b4d;
+	color: #ffffff;
+	padding: 2px;
+	/*border-bottom: 1px solid black;*/
+	line-height: 1.2em;
+	font-size: 1.2em;
+	text-align: center;
+}
+
+.sheet-rolltemplate-ironsworn .sheet-subheader {
+    background-color: #434b4d;
+    color: #ffffff;
+    line-height: 0.9em;
+    font-size: 0.9em;
+    font-family: Rockwell, "Courier Bold", Courier, Georgia, Times, "Times New Roman", serif;
+    font-variant: small-caps;
+    font-style: italic;
+    font-weight: bold;
+    text-align: left;
+}
+
+.sheet-rolltemplate-ironsworn .sheet-subfooter {
+    background-color: #b9b9b6;
+    line-height: 0.9em;
+    font-size: 0.9em;
+    font-family: Rockwell, "Courier Bold", Courier, Georgia, Times, "Times New Roman", serif;
+    font-variant: small-caps;
+    font-style: italic;
+    font-weight: bold;
+    text-align: left;
+}
+
+.sheet-rolltemplate-ironsworn .userscript-tcat {
+	font-weight: bold;
+}
+
+.sheet-rolltemplate-ironsworn td {
+	padding: 5px;
+	/*border-bottom: 1px solid black;*/
+}
+
+.sheet-rolltemplate-ironsworn tr:nth-child(odd) {
+	background-color: #d9d9d6;
+}
+
+.sheet-rolltemplate-ironsworn tr:nth-child(even) {
+	background-color: #e9e9e6;
+}
+
+.sheet-rolltemplate-ironsworn .inlinerollresult  {
+	display: inline-block;
+	min-width: 1.5em;
+	text-align: center;
+	border: 2px solid #434b4d;
+	background: transparent;
 }
