added back in bond css

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -201,6 +201,16 @@ input.sheet-clear-vow + .sheet-vow-clear-label {
     align-items: center;
 }
 
+.sheet-bonds {
+    margin-bottom: 0px;
+}
+.sheet-bond {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .sheet-vows {
     margin-bottom: 0px;
 }
