--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -236,6 +236,17 @@ input.sheet-clear-vow + .sheet-vow-clear-label {
     align-items: top;
 }
 
+.sheet-flex-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.sheet-flex-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+}
+
 .sheet-momentum-box {
     width: 80px;
     height: 45px;
@@ -540,24 +551,23 @@ input[type="checkbox"].sheet-path-stat:checked ~ .sheet-path-stat {
     display: block;
 }
 
-.sheet-asset-skill {
+textarea.sheet-asset-skill {
     width: 242px;
     height: 85px;
-    margin: 10px 4px 0px 25px;
+    margin: 0px 4px 10px 25px;
     resize: none;
     border: 0;
 }
 
-.sheet-asset-skill {
+input[type="checkbox"].sheet-asset-skill {
     opacity: 1 !important;
-    margin: 0px 0px 17px 21px !important;
+    margin: 0px 0px 20px 15px !important;
 }
 
 .sheet-asset {
     display: inline-block;
     width: 320px;
     max-width: 320px;
-    border-radius: 4px;
     border: 2px solid #343433;
     margin-left: 44px;
     margin-bottom: 20px;
@@ -566,6 +576,11 @@ input[type="checkbox"].sheet-path-stat:checked ~ .sheet-path-stat {
 div.sheet-assets{
     display: block !important;
     text-align: left;
+}
+
+div.sheet-assets .repcontainer {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 div.sheet-assets .repcontainer .repitem {
@@ -613,6 +628,7 @@ div.sheet-assets .repcontrol{
 .sheet-ritual-box-wrapper {
     margin-left: 5px;
     margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .sheet-armour-box-wrapper {
@@ -639,6 +655,10 @@ div.sheet-assets .repcontrol{
 
 input.sheet-border-bottom {
     border-bottom: 1px solid black;
+}
+
+.sheet-combat-talent-requirement-area {
+    height: 20px !important;
 }
 
 /* ROLL TEMPLATE */
